// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableSheet Custom Tests should calc correctly col index of leaf nodes 1`] = `
Array [
  Object {
    "colIndex": 0,
    "value": "省份",
  },
  Object {
    "colIndex": 1,
    "value": "城市",
  },
  Object {
    "colIndex": 2,
    "value": "类型",
  },
  Object {
    "colIndex": 3,
    "value": "价格",
  },
  Object {
    "colIndex": 4,
    "value": "数量",
  },
]
`;

exports[`TableSheet Custom Tests should calc correctly leaf nodes width after column resized 1`] = `
Array [
  Object {
    "height": 100,
    "value": "地区",
  },
  Object {
    "height": 30,
    "value": "省份",
  },
  Object {
    "height": 30,
    "value": "城市",
  },
  Object {
    "height": 130,
    "value": "类型",
  },
  Object {
    "height": 100,
    "value": "金额",
  },
  Object {
    "height": 30,
    "value": "价格",
  },
  Object {
    "height": 30,
    "value": "数量",
  },
]
`;

exports[`TableSheet Custom Tests should format custom column 1`] = `
Array [
  Object {
    "actualText": "地区",
    "id": "area",
    "value": "地区",
  },
  Object {
    "actualText": "省份",
    "id": "province",
    "value": "省份",
  },
  Object {
    "actualText": "城市",
    "id": "city",
    "value": "城市",
  },
  Object {
    "actualText": "类型",
    "id": "type",
    "value": "类型",
  },
  Object {
    "actualText": "金额",
    "id": "money",
    "value": "金额",
  },
  Object {
    "actualText": "价格",
    "id": "price",
    "value": "价格",
  },
  Object {
    "actualText": "数量",
    "id": "number",
    "value": "数量",
  },
]
`;

exports[`TableSheet Custom Tests should format custom column 2`] = `
Array [
  "浙江省",
  "浙江省",
  "浙江省",
  "浙江省",
  "浙江省",
  "浙江省",
  "浙江省",
  "浙江省",
  "浙江省",
  "浙江省",
  "浙江省",
  "浙江省",
  "#-杭州市",
  "#-绍兴市",
  "#-宁波市",
  "#-舟山市",
  "#-杭州市",
  "#-绍兴市",
  "#-宁波市",
  "#-舟山市",
  "#-杭州市",
  "#-绍兴市",
  "#-宁波市",
  "#-舟山市",
  "家具",
  "家具",
  "家具",
  "家具",
  "家具",
  "家具",
  "家具",
  "家具",
  "办公用品",
  "办公用品",
  "办公用品",
  "办公用品",
  "2",
  "2",
  "2",
  "2",
  "2",
  "2",
  "2",
  "2",
  "2",
  "2",
  "2",
  "2",
  "7789",
  "2367",
  "3877",
  "4342",
  "5343",
  "632",
  "7234",
  "834",
  "945",
  "1304",
  "1145",
  "1432",
]
`;

exports[`TableSheet Custom Tests should render custom layout column nodes 1`] = `
Array [
  Object {
    "description": undefined,
    "height": 30,
    "value": "地区",
    "width": 239.6,
  },
  Object {
    "description": undefined,
    "height": 30,
    "value": "省份",
    "width": 119.8,
  },
  Object {
    "description": undefined,
    "height": 30,
    "value": "城市",
    "width": 119.8,
  },
  Object {
    "description": undefined,
    "height": 60,
    "value": "类型",
    "width": 119.8,
  },
  Object {
    "description": undefined,
    "height": 30,
    "value": "金额",
    "width": 239.6,
  },
  Object {
    "description": "价格描述",
    "height": 30,
    "value": "价格",
    "width": 119.8,
  },
  Object {
    "description": undefined,
    "height": 30,
    "value": "数量",
    "width": 119.8,
  },
]
`;

exports[`TableSheet Custom Tests should render custom multiple column nodes 1`] = `
Array [
  Object {
    "description": "a-1 描述",
    "height": 30,
    "value": "自定义节点 a-1",
    "width": 449.25,
  },
  Object {
    "description": "a-1-1 描述",
    "height": 30,
    "value": "自定义节点 a-1-1",
    "width": 299.5,
  },
  Object {
    "description": "指标1描述",
    "height": 30,
    "value": "指标1",
    "width": 149.75,
  },
  Object {
    "description": "指标2描述",
    "height": 30,
    "value": "指标2",
    "width": 149.75,
  },
  Object {
    "description": "a-1-2 描述",
    "height": 60,
    "value": "自定义节点 a-1-2",
    "width": 149.75,
  },
  Object {
    "description": "a-2 描述",
    "height": 90,
    "value": "自定义节点 a-2",
    "width": 149.75,
  },
]
`;
